--- a/firebase_deneme/style.css
+++ b/firebase_deneme/style.css
@@ -6,7 +6,7 @@
 
 .productcard  {
     border: 1px lightgray solid;
-    height: 25%;
+    max-height: 25%;
     width: 30%;
     margin:25px;
     display: flex;
@@ -14,6 +14,12 @@
     justify-content: space-between;
     flex-direction: column;
     transition: border-color .3s;
+}
+.test-success{
+    color: green;
+}
+.test-warning{
+    color: red;
 }
 
 .productcard:hover{
