--- a/firebase_deneme/style.css
+++ b/firebase_deneme/style.css
@@ -109,3 +109,11 @@
 #title, #description{
     word-wrap: break-word;
 }
+
+.test-success{
+    color: green;
+}
+
+.test-warning{
+    color: red;
+}
